istio/04-kubernetes-api-mtls/internal-via-egress/authorizationpolicy.yaml
apiVersion: security.istio.io/v1beta1
kind: AuthorizationPolicy
metadata:
  labels:
    app: gateways
    release: istio
    squad: "foundation"
    tribe: "system"
  name: k8s-cluster-sgp-default-svc-cluster-local-az
  namespace: istio-system
spec:
  action: ALLOW
  rules:
    - to:
        - operation:
            hosts:
              - k8s-cluster-sgp.default.svc.cluster.local*
  selector:
    matchLabels:
      istio: egressgateway
